--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "@google-cloud/vision": "^4.3.2"
+    "@google-cloud/vision": "^4.3.2",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "openai": "^4.65.0"
   }
 }
