--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^6.0.0
+  image_picker: ^0.8.7+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
