--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "openai": "^4.65.0",
     "tesseract.js": "^5.1.1"
