--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "cors": "^2.8.5"
+    "@google-cloud/vision": "^4.3.2",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "firebase-admin": "^12.5.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.65.0",
+    "tesseract.js": "^5.1.1"
   }
 }
